<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/android_white_nice"
    tools:context=".MainLogin"
    >

    <ImageView
        android:id="@+id/img_atras_login"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_marginTop="@dimen/dp_20"
        android:layout_marginStart="@dimen/dp_15"
        android:src="@drawable/icon_home"

        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        />

    <ImageView
        android:id="@+id/img_login"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:src="@drawable/icon_user"
        android:layout_marginTop="@dimen/dp_15"


        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cv_login"
        />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp"
        android:padding="@dimen/dp_15"
        app:cardCornerRadius="10dp"
        app:cardElevation="3dp"
        android:background="#DE838383"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"

        >
        <LinearLayout
            android:id="@+id/ll_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/tv_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_login"
                android:textSize="20sp"
                android:textColor="#DE838383"
                />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="@dimen/dp_15"

                >

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_login_email"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_email"
                    android:textSize="15sp"
                    />


            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_login_pass"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="@dimen/dp_15">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/tie_login_pass"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/text_pass"
                    android:textSize="15sp"
                    />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:text="@string/text_btn_login"
                android:background="@drawable/border_button"
                android:textColor="@color/black"
                android:textSize="15sp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="@dimen/dp_20"
                />
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/text_enlace_login_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_login_register"
        android:textColor="@color/white"
        android:textSize="15sp"
        android:drawableLeft="@drawable/icon_register"
        android:layout_marginTop="@dimen/dp_5"
        android:textStyle="bold"
        android:underline="true"
        android:clickable="true"
        android:focusable="true"


        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cv_login"
        />

</androidx.constraintlayout.widget.ConstraintLayout>